# descartes_system_tests

./: CMakeLists.txt  README.md  descartes_system_tests.rosinstall  package.xml
include/descartes_system_tests/: utils.h
include/descartes_system_tests/message_serialization/: geometry_msgs_yaml.h
src/: collision_body_tests.cpp  multithread_tests.cpp
support/data/: waypoints.yaml
support/meshes/end_effector/collision/: eoat_hull.stl
support/meshes/environment/: obstacle_01_2_2.dae  obstacle_multibody_planes.dae  obstacle_shelf.dae
support/meshes/ur10e/collision/: upper_arm_multibody.dae
support/urdf/: ur10e.srdf  ur10e_near_obstacle_multibody_dae.urdf  ur10e_near_obstacle_primitive.urdf  ur10e_near_obstacle_shelf.urdf  ur10e_no_obstacle.urdf  ur10e_with_obstacle.urdf
