<?xml version="1.0"?>
<package format="2">
    <name>descartes_system_tests</name>
    <version>0.1.0</version>
    <description>Higher-level system integration tests for the descartes_light sampling-based planner.</description>

    <maintainer email="joe.schornak@gmail.com">Joseph Schornak</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <depend>ur_ikfast_kinematics</depend>
    <depend>descartes_ikfast</depend>
    <depend>tesseract_rosutils</depend>
    <depend>tesseract_monitoring</depend>

    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>visualization_msgs</depend>
</package>
